--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Pacifico&family=Permanent+Marker&display=swap');
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +8,7 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1 {
@@ -30,10 +32,14 @@ main section {
 
 body {
     background-color: #396E94;
+    font-family: Comic Neue;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-    background-color: #396E94;
+    background-color: purple;
 }
 
 nav a:hover {
@@ -46,6 +52,10 @@ nav a:hover {
     background-color: #219ebc;
     color: black;
     text-decoration: none;
+    font-size: 2em;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover,
@@ -55,11 +65,13 @@ nav a:hover {
 }
 
 #background {
-    background-color: #396E94;
+    background-color: yellow;
 }
 
 .msg {
-    background-color: #396E94;
+    background-color: peru;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
@@ -68,18 +80,25 @@ footer {
 
 .home-title {
     color: black;
+    font-family: permanent marker;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
     color: black;
+    text-align: center;
 }
 
 .msg h2 {
     color: black;
+    font-family: pacifico;
 }
 
 .msg p {
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer h3 {
@@ -97,8 +116,47 @@ footer a:hover {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
+}
+
+.logo {
+    width: 80px;
 }
 
 footer h3 a:hover {
     text-decoration: none;
+}
+
+h2 {
+    margin: 0;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer {
+    padding: 25px 50px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card,
+.camping-card,
+.rapids-card {
+    margin: 200px 0;
+}
+
+footer {
+    margin-top: 200px;
+}
+
+.card-img {
+    border: 10px solid rgba(184, 124, 14, 0.911);
+}
+
+main section img {
+    box-sizing: border-box;
 }
