--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Permanent+Marker&family=Roboto+Condensed:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Permanent+Marker&display=swap');
 :root {
     /* change the values below to your colors from your palette */
     --primary-color: #fb8500;
@@ -11,7 +11,7 @@ Fonts are separated by a | */
     --accent2-color: #219ebc;
     /* change the values below to your chosen font(s) */
     --heading-font: "Permanent Marker";
-    --paragraph-font: Roboto, Comic;
+    --paragraph-font: Pacifico;
     /* these colors below should be chosen from among your palette colors above */
     --headline-color-on-white: #Black;
     /* headlines on a white background */
