updated background image to full

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -10,7 +10,9 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }
-
+#hero-img{
+    width: 100%;
+}
 #hero-msg h1 {
     text-align: center;
 }
