--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,26 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Pacifico&family=Permanent+Marker&display=swap');
 #content {
-    max-width: 1600px;
+    max-width: 1680px;
     margin: 0 auto;
 }
-
+nav{
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
-    color: black;
+    color: whitesmoke;
     text-decoration: none;
     padding: 35px;
+    font-family: ;
 }
 #hero-img{
     width: 100%;
 }
 #hero-msg h1 {
     text-align: center;
+    color: white;
+}
+#hero-msg h4{
+    color: white;
 }
 
 .button-box {
     text-align: center;
 }
-
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
 main section {
     text-align: center;
 }
@@ -28,8 +45,18 @@ main section {
 #background {
     height: 752px;
 }
-
-
+#hero-msg{
+    grid-column:2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+}
+.card-img, .mountains{
+    width: 100%;
+}
 /** Main colors**/
 
 body {
@@ -41,12 +68,14 @@ body {
 }
 
 header {
-    background-color: purple;
+    background-color: #3a3a3ae0;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover {
     background-color: #fb8500;
-    color: black;
+    color: white;
 }
 
 .book,
@@ -74,6 +103,9 @@ nav a:hover {
     background-color: peru;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row:6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
@@ -135,6 +167,8 @@ h2 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self:center;
+    align-self: center;
 }
 
 footer {
@@ -151,14 +185,102 @@ footer .social img {
     margin: 200px 0;
 }
 
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg{
+    grid-column: 6/10;
+    grid-row: 6/7;
+}
+
 footer {
     margin-top: 200px;
 }
 
 .card-img {
     border: 10px solid rgba(184, 124, 14, 0.911);
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+
 }
 
 main section img {
     box-sizing: border-box;
+}
+
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
