--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital@1&family=Pacifico&family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 #content {
     max-width: 1680px;
     margin: 0 auto;
@@ -12,14 +13,14 @@ nav a {
     color: whitesmoke;
     text-decoration: none;
     padding: 35px;
-    font-family: ;
+    font-family: Satisfy;
 }
 #hero-img{
     width: 100%;
 }
 #hero-msg h1 {
     text-align: center;
-    color: white;
+    color: black;
 }
 #hero-msg h4{
     color: white;
@@ -60,7 +61,7 @@ main section {
 /** Main colors**/
 
 body {
-    background-color: #396E94;
+    background-color: #e7e7e7;
     font-family: Comic Neue;
     font-size: 22px;
     margin: 0;
@@ -96,7 +97,7 @@ nav a:hover {
 }
 
 #background {
-    background-color: yellow;
+    background-color: #FFE8D1;
 }
 
 .msg {
@@ -236,7 +237,7 @@ main section img {
 }
 
 footer {
-    background-color: #6f7364;
+    background-color: #3a3a3ae0;
     padding: 25px 50px;
     margin-top: 200px; 
     display: flex;
