--- a/personal site/style.css
+++ b/personal site/style.css
@@ -3,10 +3,32 @@
 * {
   padding: 0;
   margin: 0;
-  margin-top: 2px;
+  margin-top: 0px;
   box-sizing: border-box;
 }
-
+#preloader {
+  background: rgb(0, 0, 0) url(images/loader.gif) no-repeat center center;
+  background-size: 35%;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  animation-duration: preloader 3s infinte ease;
+}
+.home-button {
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  color: white;
+  padding: 10px;
+  font-size: 40px;
+}
+.home-button:focus {
+  color: orange;
+}
 body,
 button {
   font-family: "Poppins", sans-serif;
@@ -16,7 +38,7 @@ button {
   min-height: 100vh;
   width: 100%;
   background-color: #485461;
-  background-image: linear-gradient(135deg, #3A86FF 0%, #FB5607 74%);
+  background-image: linear-gradient(135deg, #3a86ff 0%, #fb5607 74%);
   overflow-x: hidden;
   transform-style: preserve-3d;
 }
@@ -120,14 +142,17 @@ header {
 }
 
 .inner {
-  max-width: 35rem;
+  max-width: 65rem;
   text-align: center;
   color: #fff;
   padding: 0 2rem;
 }
+#demo {
+  font-weight: lighter;
+}
 
 .title {
-  font-size: 2.7rem;
+  font-size: 1.7rem;
 }
 
 .btn {
@@ -309,10 +334,9 @@ Home Navigation
   overflow: hidden;
   margin: -20px auto;
   padding-top: 14px;
-  
 }
 
-.navigation input[type=text] {
+.navigation input[type="text"] {
   float: left;
   padding: 6px;
   border: none;
@@ -320,11 +344,11 @@ Home Navigation
   margin-right: 26px;
   font-size: 17px;
 }
-.navigation .right{
+.navigation .right {
   float: right;
 }
-.logo{
-  float:left;
+.logo {
+  float: left;
   width: 90px;
 }
 /* Style the links inside the navigation bar */
@@ -343,19 +367,18 @@ Home Navigation
   background-color: whitesmoke;
   color: black;
 }
-#hero-img{
+#hero-img {
   width: 100%;
   padding-top: 16px;
   margin-top: 2px;
-
 }
-#hero-box{
+#hero-box {
   grid-column: 1/4;
   grid-row: 1/3;
   z-index: -1;
 }
-#hero-msg{
-  grid-column:2/3;
+#hero-msg {
+  grid-column: 2/3;
   grid-row: 1/2;
   margin-top: 100px;
 }
@@ -363,79 +386,67 @@ Home Navigation
   text-align: center;
   color: black;
 }
-#hero-msg h4{
+#hero-msg h4 {
   color: white;
 }
-.blog1{
+.blog1 {
   color: red;
   text-align: center;
   color: black;
   font-family: permanent marker;
   margin-bottom: 70px;
-
- 
 }
-.blgtxt{
+.blgtxt {
   display: grid;
-  grid-template-columns: 1fr 2fr ;
-  gap:10px;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
   text-align: center;
   padding-top: 0px;
 }
-.blgimg{
+.blgimg {
   height: 10px;
- 
 }
 
-#blgimg{
+#blgimg {
   width: 900px;
   margin-left: 20px;
 }
 
-
-
-
-.blog2{
+.blog2 {
   color: red;
   text-align: center;
   color: black;
   font-family: permanent marker;
-  
- 
 }
-.blgtxt1{
+.blgtxt1 {
   display: grid;
-  grid-template-columns: 2fr 1fr ;
-  gap:70px;
+  grid-template-columns: 2fr 1fr;
+  gap: 70px;
   text-align: center;
   padding-top: 70px;
 }
-.blgimg1{
+.blgimg1 {
   height: 10px;
- 
 }
-#search{
+#search {
   width: 350px;
 }
-#blgimg1{
+#blgimg1 {
   width: 900px;
   margin-right: 20px;
-
 }
-#ban1-img{
-margin-top: 10px;
-margin-bottom: -6px;
-width: 1680px;
+#ban1-img {
+  margin-top: 10px;
+  margin-bottom: -6px;
+  width: 1680px;
 }
 
 .footer {
   background-color: #ee9b00;
   overflow: hidden;
-
-  
 }
 
-.footer input[type=text] {
+.footer input[type="text"] {
   float: left;
   padding: 6px;
   border: none;
@@ -443,11 +454,11 @@ width: 1680px;
   margin-right: 26px;
   font-size: 17px;
 }
-.footer .right{
+.footer .right {
   float: right;
 }
-.logo{
-  float:left;
+.logo {
+  float: left;
   width: 60px;
   height: 54px;
 }
@@ -467,15 +478,15 @@ width: 1680px;
   background-color: whitesmoke;
   color: black;
 }
-.pay{
+.pay {
   padding-top: 0px;
   padding-right: 33px;
   text-align: center;
 }
 
-.home-grid{
+.home-grid {
   display: grid;
-  grid-template-columns: repeat(10,1fr);
+  grid-template-columns: repeat(10, 1fr);
 }
 
 /* CSS for cards */
@@ -490,94 +501,92 @@ width: 1680px;
 
 .grid-item {
   background-color: orangered;
-  border: 1px solid rgba(0, 0, 0, 0.8);
+
   padding: 0px;
   font-size: 40px;
   text-align: center;
-  padding: -10px -10px -10px -10px; 
+  padding: -10px -10px -10px -10px;
 }
 
-body{
+body {
   background-color: #efefef;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.photocard{
+.photocard {
   max-width: 500px;
-  color:#64656f;
+  color: #64656f;
   margin: 0 auto;
   background-color: #ffff;
-
 }
 
-.photocard header{
+.photocard header {
   display: grid;
-  padding:0 15px;
-  gap:10px;
+  padding: 0 15px;
+  gap: 10px;
   grid-template-columns: 1fr 8fr 4fr 1fr;
   align-items: center;
 }
 
-.photocard header img{
-  width:35px;
+.photocard header img {
+  width: 35px;
   border-radius: 100%;
-  padding:10px 0; 
+  padding: 10px 0;
 }
-.photocard .user{
+.photocard .user {
   font-weight: bold;
 }
-.photocard .time{
+.photocard .time {
   color: #e4e3e7;
   text-align: right;
   font-size: 0.85em;
 }
-.photocard .menu{
+.photocard .menu {
   text-align: right;
 }
-.photocard a:link, .photocard a:visited, .photocard a:hover, .photocard a:active { 
-
+.photocard a:link,
+.photocard a:visited,
+.photocard a:hover,
+.photocard a:active {
   color: #bfbfbf;
   text-decoration: none;
 }
 
-.photocard a:hover{
-  color:#64656f;
+.photocard a:hover {
+  color: #64656f;
 }
-.photocard img{
+.photocard img {
   width: 100%;
 }
 
-.photocard footer{
-  display:grid;
+.photocard footer {
+  display: grid;
   grid-template-columns: 1fr 1fr 4fr 5fr;
   grid-template-rows: 40px;
   justify-items: left;
   align-items: center;
-  gap:6px;
-  padding:0 15px;
+  gap: 6px;
+  padding: 0 15px;
 }
-.photocard .love{
+.photocard .love {
   justify-self: end;
   font-weight: bold;
-
 }
-.photcard footer i{
-
+.photcard footer i {
   font-size: 0.85em;
 }
 .button-box {
   text-align: center;
 }
-.book
-  {
-    background-color: orange;
-    color: black;
-    text-decoration: none;
-    font-size: 2em;
-    padding: 2px 20px;
-   
-    border-radius: 5px;
+.book {
+  background-color: orange;
+  color: black;
+  text-decoration: none;
+  font-size: 2em;
+  padding: 2px 20px;
+
+  border-radius: 5px;
 }
 .book:hover {
-    background-color: green;
-    color: black;
+  background-color: green;
+  color: black;
 }
