--- a/personal site/home/style.css
+++ b/personal site/home/style.css
@@ -3,7 +3,9 @@
 * {
   box-sizing: border-box;
 }
-
+.purchase-body{
+  background-color: #E9C46A;
+}
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -276,6 +278,7 @@ footer .social img {
 
 footer {
   background-color: #e9e9e9;
+  color: white;
   
   padding: 5px 50px;
   margin-top: 0px;
@@ -544,7 +547,7 @@ footer {
 }
 
 .container {
-  background-color: #f2f2f2;
+  background-color: #F1FAEE;
   padding: 5px 20px 15px 20px;
   border: 1px solid orange;
   border-radius: 3px;
@@ -649,6 +652,9 @@ span.price {
 
 .team-button:hover {
   background-color: #555;
+}
+.team-row{
+  background-color: #F4A261;
 }
 
 /* On smaller screens, decrease text size */
